--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "verceltest",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "vercel-build": "npm install"
+  },
   "dependencies": {
     "express": "^4.21.2"
   }
